# cyber-range-monitor

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.adoc  README.md  conns.py  cyber-range-monitor-v-2.code-workspace  dock.py  docker-compose.yml  entrypoint.sh  guac_data.py  guacamole.yaml.sample  main.py  monitor_guac.py  parse.py  pyproject.toml  requirements.txt  run.py  setup.py
backend/: .dockerignore  .gitignore  Dockerfile  config.example.yml  main.py  pyproject.toml  test.py
backend/app/: build.py  main.py
backend/app/auth/: config.py  const.py  dependency.py  errors.py  schemas.py  session_manager.py  session_security.py  session_service.py
backend/app/cli/: api_config.py  api_db.py  api_run.py  main.py
backend/app/cli/utils/: config_utils.py
backend/app/common/: logging.py  models.py
backend/app/config/: main.py  secrets.py  static.py
backend/app/configs/: __init__.py  app.py  config_init.py  database.py  main.py  project.py  redis.py  secret.py  session.py
backend/app/datasources/: errors.py  router_setup.py  service.py
backend/app/datasources/schemas/: __init__.py  base_schemas.py  guacamole.py  openstack.py  saltstack.py
backend/app/db/: const.py  dependency.py  main.py  seed.py
backend/app/extensions/: api_console.py  logger.py
backend/app/extensions/middleware/: __init__.py  exc_handler.py  request_log.py  security_headers.py
backend/app/extensions/redis/: client.py  const.py  session_store.py
backend/app/extensions/security/: const.py  crypto.py  user_roles.py
backend/app/logging/: dependency.py  schemas.py  service.py
backend/app/models/: __init__.py  audited_mixin.py  base.py  enums.py  logs.py  pk_id_mixin.py  user.py
backend/app/models/datasource/: __init__.py  datasource_mixin.py  guac.py  openstack.py  saltstack.py
backend/app/routers/: __init__.py  auth.py  datasource.py  logs.py  user.py
backend/app/routers/datasource_router/: __init__.py  router.py
backend/app/schemas/: base.py  config.py  datasource_schema.py  errors.py  types.py  utils.py  web.py
backend/app/security/: __init__.py
backend/app/services/: datasource_service.py
backend/app/services/auth/: auth_service.py
backend/app/settings/: __init__.py  errors.py  main.py  secrets.py
backend/app/settings/static/: __init__.py  app.py  database.py  pyproject_info.py  redis.py  sessions.py  yml_source.py
backend/app/shared/: crud_mixin.py  errors.py  schemas.py
backend/app/users/: controller.py  dependency.py  errors.py  schemas.py
backend/cli/: __main__.py  api_config.py  api_db.py  api_run.py  build.py  config_app.py  db_cli_app.py  main.py  prompts.py  run_app.py
backend/configs/: config.dev.yml  config.docker.yml  example.yml
backend/scripts/: create_env.py  format.sh  lint.sh  openapi_json.py  seed_db.py
backend/tests/: test_auth.py
cli/: api_config.py  api_db.py  api_run.py  (+2 more)
version_1/: .gitignore  Dockerfile  README.adoc  entrypoint.sh  pyproject.toml
version_1/range_monitor/: __init__.py  auth.py  db.py  schema.sql  setup.py
version_1/range_monitor/plugins/guacamole/: guac_conn.py
version_1/range_monitor/plugins/openstack/: __init__.py  stack_class.py  stack_conn.py
version_1/range_monitor/plugins/saltstack/: parse.py  salt_call.py
version_1/range_monitor/static/css/: styles.css  user-changes.css  user_list.css
version_1/range_monitor/static/js/: base.js  delete.js  index.js  source_edits.js
version_1/range_monitor/templates/: base.html
version_1/tests/: conftest.py  data.sql  test_auth.py  test_db.py
(+666 files in other folders)
