[project]
name = "range_monitor"
version = "0.0.1"
description = "Cyber Range Infrastructure Monitor"
dependencies = [
    "flask",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["range_monitor"]