[project]
name = "range_monitor"
version = "1.0.0"
description = "Cyber Range Infrastructure Monitor - A monitoring tool for managing cyber range infrastructure."
dependencies = [
    "flask",
    "pymysql"
]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["range_monitor"]